--- a/did-dark.conf
+++ b/did-dark.conf
@@ -1,5 +1,5 @@
 #
-# Copyright 2013 Paul Thompson <redoubts(at)gmail(dot)com>
+# Copyright 2016 Eduard Pinuaga <info@did-web.com>
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -23,7 +23,7 @@ description= A colorscheme inspired in Colorscheme SpyderDark of Paul Thompson.
 # incremented automatically, do not change manually
 version=0
 author=Eduard Pinuaga
-url=https://github.com/Redoubts/SpyderDark
+url=https://github.com/Didweb/did-dark
 # list of each compatible Geany release version
 compat=1.22;1.23;1.23.1;1.24
 
