Modificado color de numeros por uno más vistoso.

--- a/did-dark.conf
+++ b/did-dark.conf
@@ -60,7 +60,7 @@ comment_line_doc=comment_doc
 comment_doc_keyword=comment_doc,bold
 comment_doc_keyword_error=comment_doc,italic
 
-number=#820E0E;#131926;false;false
+number=#3BD17E;#131926;false;false
 number_1=number
 number_2=number_1
 
